# 20260626_ArcaVida

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  release-notes.md  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bot/: commands.py  handlers.py  main.py
config/: settings.py  slang.json
core/: briefing.py  extractor.py  material_manager.py  slang_matcher.py  translator.py
docs/: arcavida-development-plan.md  deployment-cn.md  deployment-venezuela.md  external-storage-workspace-performance.md  live-credential-integration.md  material-distribution-tracking.md  release-checklist.md  release-safety.md  usage-quick-guide.md
docs/schemas/: compose-spec.local.json
models/: database.py  schemas.py
scripts/: external-workspace-cache.js  integration-smoke.py  repo-preflight.js  telegram-diagnose.py
tests/: test_briefing.py  test_database.py  test_extractor.py  test_material_manager.py  test_settings.py  test_slang.py  test_translator.py  test_web_app.py
web/: __init__.py  app.py
