[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project]
name = "arcavida"
version = "2.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
google-translate = ["google-cloud-translate>=3.15,<4"]
